--- a/kirill.html
+++ b/kirill.html
@@ -34,7 +34,7 @@
         <section class="member-hero">
             <div class="member-container">
                 <div class="member-image">
-                    <img src="kirill.png" alt="Еналиев Кирилл"> умоляю вставь фотку мою какуюнить
+                    <img src="kirill.png" alt="Еналиев Кирилл"> 
                 </div>
                 <div class="member-info">
                     <h1>Еналиев Кирилл</h1>
@@ -83,4 +83,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
